--- a/master.tex
+++ b/master.tex
@@ -1,5 +1,5 @@
 \documentclass[a4paper]{article}
-\input{../preamble.tex}
+\input{preamble.tex}
 \newcommand{\lablsection}[1]{\section{#1}}
 \newcommand{\lablsubsection}[1]{\subsection{#1}}
 \newcommand{\assi}[6]{
