--- a/lec_01.tex
+++ b/lec_01.tex
@@ -2,7 +2,7 @@
 	Iniziamo:
 	\section{Definizioni}
 	\begin{itemize}
-		\item \textbf{Sistema}: cosa vogliamo controllare.
+		\item \textbf{Sistema}: la cosa che vogliamo controllare.
 		\item \textbf{Controllo automatico}: senza o parziale controllo umano.
 		\item \textbf{Controllo manuale}: azione esercitata dal l'operatore
 	\end{itemize}
