rimosso definizione comando ripetuta

--- a/master.tex
+++ b/master.tex
@@ -20,7 +20,7 @@
 % \newacronym{rh}{R-H}{Routh-Hurwitz}
 % \makenoidxglossaries
 \newcommand{\nota}[1]{\begin{figure}[H]\centering \Large$ \textcolor{gray}{\int} $\normalsize Nota: #1\end{figure}}
-\newcommand{\person}[1]{\textsf{#1}}
+%\newcommand{\person}[1]{\textsf{#1}}
 \title{Fondamenti di Automatica}
 \begin{document}
     \maketitle
