--- a/lec_04.tex
+++ b/lec_04.tex
@@ -81,10 +81,10 @@
 	\end{align*}
 	Trovo un sistema equivalente:
 	\begin{equation*}
-		\begin{cases*}
+		\begin{cases}
 			\dot{\hat{x}} = \hat{A}\hat{x}+\hat{B}u\\
 			y = \hat{C}\hat{x} + \hat{D}u
-		\end{cases*}
+		\end{cases}
 	\end{equation*}
 	\lablsubsection{Proprietà strutturale}
 	Qualsiasi proprietà indipendente dalla scelta delle variabili di stato, quindi della matrice $ \text T $, è detta \emph{strutturale}.
