--- a/lec_05.tex
+++ b/lec_05.tex
@@ -24,7 +24,8 @@
 	\begin{itemize}[]
 		\item Nominale:\\ $ \ast $ $ x_{N_0} $: condizione iniziale nominale\\  $ \ast $ $ x_N(t) $: movimento corrispondente generato applicando $ u(t) $ $ t\geq0 $
 		\item Perturbata:\\  $ \ast $ $ x_{P_{0}} $: condizione iniziale perturbata\\  $\ast$ $ x_P(t) $: movimento corrispondente generato applicando $ u(t) $ $ t\geq0 $
-	\end{itemize}}
+	\end{itemize}
+ }
 	\lablsubsection{Semplice stabilità del moto}
 	Il moto $ x_N $(t) si dice \emph{stabile} se $ \forall\varepsilon>0 $ esiste $ \delta_\varepsilon>0 $ tale che $ \forall x_{P_{0}}$ per cui $ \vvline x_{P_0}-x_{N_0}\vvline \leq \delta_\varepsilon$ allora: 
 	\begin{figure}[H]
